fixed spacing for cards in items. Can make patch request for qty in cartys, but no data.

--- a/app/app/assets/stylesheets/items.scss
+++ b/app/app/assets/stylesheets/items.scss
@@ -9,7 +9,7 @@
 .cards {
    display: flex;
    flex-wrap: wrap;
-   justify-content: space-between;
+   justify-content: space-around;
 }
 
 
